1.4.0-vcli-alpha Sara

* Added a properties table that gets read everytime and status update by the service is preformed.

* Added /public/services/ping.txt which return "Pong" for pinguin live servers

* Added the automatic marking of out of sync to the backend adapter thread service

* Modified the test to remove the shutdown hooks (so test do not pile a bunch of them up all fired at once)

* Added a setLevel method to all factory logger objects

* Created a self contained logger

* Modified the shutdown hook to close properly

* Split the insert update into an update [+insert] for the server status

* Refactoring to create the selfcontained coordinator

* Added a transactional layer to the operations

* Added a log table to handle events

* Split the server info in two tables (status and info to separate dynamic versus static content)

* Writing designing the tables for the Meandre server tracking

* Adding shutdown hooks for proper cleaning of service status

* Starting the backend adapters to allow consistent backend storage usage

* Fix to the webuidispatcher set done.

* More rearranging of the log levels 

* Modified the log formatter. Beside rearranging the info fields, not it displays properly on different OS

* Fix to avoiding the core config file to be overwritten

* Fix to the store properties to avoid overwriting the existing file

* Update the version number to 1.4.0-vcli-alpha 

* Changed added some info login on the MeandreServer operations

* Fixed VFServlet nonsensical login message levels

* Fixed the JarToolServlet login of the exceptions

* Reshaping the logger to make it leaner:
	- most conductor messages move to fine
	- store messages moved to config when possible
	- wrapped component toned down a bit

* Removing JMX and the rmi registry to avoid problems on concurrent testing

* Removing terracota test


1.3.1vcli Xuixo

* Updated Xstream library to 1.3 July 19th 2008

* Added simple formatter for the logger July 19th 2008


1.3.1vcli Xuixo