@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>	
-<comment>Query mapping for MySQL</comment>
+<comment>Generic query mapping for SQL databases</comment>
+	<entry key="DB">GENERIC</entry>
 	<entry key="MARKER">@@@</entry>
 	<entry key="CREATE_SERVER_STATUS_TABLE">
 			CREATE TABLE IF NOT EXISTS meandre_server_status 
@@ -102,7 +103,7 @@
 	<entry key="DELETE_SERVER_INFO">
 			DELETE FROM meandre_server_info WHERE ID=?
 	</entry>
-	<entry key="LOG_SERVER_UNREGISTER">
+	<entry key="LOG_SERVER_EVENT">
 			INSERT INTO meandre_server_log (
 					ID,
 					status,
