@@ -1,5 +1,7 @@
 1.4.0-vcli-alpha Sara
 
+* Hooked the back end adapter to the meandre server
+
 * Added a properties table that gets read everytime and status update by the service is preformed.
 
 * Added /public/services/ping.txt which return "Pong" for pinguin live servers
